Working on basic styling

--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -1,3 +1,7 @@
 @import "base/_global";
 @import "base/_utilities";
 @import "base/_variables";
+
+@import "modules/_header";
+@import "modules/_task-input";
+@import "modules/_task-list";
