--- a/app/assets/styles/modules/_task-list.scss
+++ b/app/assets/styles/modules/_task-list.scss
@@ -40,7 +40,7 @@
 
         &:last-child {
 
-            margin-bottom: 2rem;
+            //margin-bottom: 2rem;
             border-bottom: solid $color-gray .1rem;
 
         }
@@ -57,6 +57,7 @@
 
         display: inline-block;
         padding: 1.2rem 3.3rem;
+        margin-top: 2rem;
         border: none;
         text-decoration: none;
 
