--- a/app/assets/styles/modules/_task-list.scss
+++ b/app/assets/styles/modules/_task-list.scss
@@ -50,6 +50,14 @@
     &__list-item-icon {
 
         color: #e67e22;
+
+        transition: all .2s;
+
+        &:hover {
+
+            color: #e62228;
+
+        }
         
     }
 
